# codewars-5-kyu

./: .gitignore  README.md  pyproject.toml  sceleton.py
 Z-algorithm/:  Z-algorithm.py   Z-algorithm.xlsx  Build String from Z.py  prefix function.py  z to p.py
Around Fibonacci- chunks and counts/: Around Fibonacci- chunks and counts.py
Array with distance of N/: Array with distance of N.py
Binary Contiguous Array/: Binary Contiguous Array 2.py
Calculating with Functions/: Calculating with Functions.py
Chain Reaction - Minimum Bombs Needed/: Chain Reaction - Minimum Bombs Needed.py  Chain Reaction - Minimum Bombs Needed01.py  Chain Reaction - Minimum Bombs Needed02.py  Chain Reaction - Minimum Bombs Needed03 2.py  Chain Reaction - Minimum Bombs Needed04.py  Chain Reaction - Minimum Bombs Needed05 2.py  Chain Reaction - Minimum Bombs Needed06 2.py  Chain Reaction - Minimum Bombs Needed07 2.py  Chain Reaction - Minimum Bombs Needed_master 2.py  Chain Reaction - Minimum Bombs Needed_master2.py
Complete Binary Tree/: Complete Binary Tree.py  Complete Binary Tree01.py  Complete Binary Tree2.py  Complete Binary Tree21.py  Complete Binary Tree211.py  Complete Binary Tree212.py  Complete Binary Tree3.py  Complete Binary Tree4.py  Complete Binary Tree42 2.py  find_height.py  find_height2.py  find_height3 2.py
Digits/: Digits 2.py
Domain name validator/: Domain name validator 2.py
Extract the domain name from a URL/: Extract the domain name from a URL.py
First non-repeating character/: First non-repeating character 2.py
Greed is Good/: Greed is Good.py
(+55 files in other folders)
