[tool.poetry]
name = "5-kyu"
version = "0.1.0"
description = "\"Codewars solvings for 5 kyu\""
authors = ["Stanislav Mayatsky <stasm226@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
